# iree-standalone

./: .gitmodules  CMakeLists.txt  README.md  build_iree.sh  build_standalone.sh
.github/workflows/: ci.yml
tools/: CMakeLists.txt
